src/test/testFiles/invalid/semanticErrors/incorrectArgTypeForPush.manimdsl
let x = new Stack<number>();
let y = new Stack<number>();
x.push(y);